dataset/local/cp_block_stale_images/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: block-stale-images
context: context.yaml
policies:
- ../block-stale-images.yaml
resources:
- bad.yaml
- good.yaml
results:
- kind: Pod
  policy: block-stale-images
  resources:
  - redis
  result: fail
  rule: block-stale-images
